# agentic-nix

./: .env.example  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  flake.nix  justfile
perSystem/: devShells.nix  formatter.nix  nixpkgs.nix  packages.nix  processes.nix
scripts/: schema.sql
src/: db.rs  embed.rs  fmt.rs  lib.rs  main.rs  rerank.rs  tools.rs
src/ingest/: code.rs  crates.rs  docs.rs  embed.rs  git.rs  github.rs  hackage.rs  main.rs  prune.rs  pypi.rs  repo_index.rs  symbols.rs
src/jail/: main.rs
